ZON-1171: style zon-parquet-large teaser layout

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -29,6 +29,7 @@
 @import "modules/teaser-fullwidth"
 @import "modules/teaser-buzz"
 @import "modules/teaser-parquet-small"
+@import "modules/teaser-parquet-large"
 @import "modules/snapshot"
 
 // ads
