--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -9,7 +9,7 @@
 	+box-shadow(inset remify(240px) 0px 0px 0px $zon_lighter_grey) // w3c style box-shadow syntax
 	border-top: 1px solid $zon_light_grey
 	font-family: $font-tabletgothic
-	padding: $compact $compact 0 $compact
+	padding: $junior $junior 0 $junior
 
 .parquet-meta
 	+inline-block
