--- a/sass/web.site/modules/_teaser-parquet-large.sass
+++ b/sass/web.site/modules/_teaser-parquet-large.sass
@@ -8,7 +8,7 @@ $parquet-image-large-width: remify(360px)
 	&__media
 		+inline-block
 		width: $parquet-image-large-width
-		margin: 0 $compact $compact 0
+		margin: 0 $junior $junior 0
 
 	&__media-item
 		@extend %teaser-media-item
@@ -41,6 +41,6 @@ $parquet-image-large-width: remify(360px)
 
 	&__container
 		+inline-block
-		margin: 0 0 $compact 0
-		max-width: remify(280px)
+		margin: 0 0 $junior 0
+		max-width: remify(290px)
 		vertical-align: top
