--- a/sass/web.site/modules/_teaser-parquet-small.sass
+++ b/sass/web.site/modules/_teaser-parquet-small.sass
@@ -8,7 +8,7 @@ $parquet-image-small-width: remify(174px)
 	&__media
 		+inline-block
 		width: $parquet-image-small-width
-		margin: 0 $compact $compact 0
+		margin: 0 $junior $junior 0
 
 	&__media-item
 		@extend %teaser-media-item
@@ -26,6 +26,7 @@ $parquet-image-small-width: remify(174px)
 
 	&__title
 		@extend %teaser-title
+		font-size: remify(18px)
 
 	&__text
 		@extend %teaser-text
@@ -41,6 +42,6 @@ $parquet-image-small-width: remify(174px)
 
 	&__container
 		+inline-block
-		margin: 0 0 $compact 0
-		max-width: remify(460px)
+		margin: 0 0 $junior 0
+		max-width: remify(470px)
 		vertical-align: top
