ZON-1241: Sass: remify the $page-padding

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -71,3 +71,6 @@ $zon-font-m: em(22px)
 //mobile navigation bar globals
 $zon-bar-height-phablet-px: 54px
 $zon-bar-height-phablet: em($zon-bar-height-phablet-px)
+
+// margins
+$page-padding: remify($petite--px)
