--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -3,7 +3,7 @@
 	clear: both
 	display: block
 	+respond-min($break-3)
-		margin: 0 (-$petite)
+		margin: 0 (-$page-padding)
 
 .parquet-row
 	+box-shadow(inset remify(240px) 0px 0px 0px $zon_lighter_grey) // w3c style box-shadow syntax
