--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -6,48 +6,70 @@
 		margin: 0 (-$page-padding)
 
 .parquet-row
-	+box-shadow(inset remify(240px) 0px 0px 0px $zon_lighter_grey) // w3c style box-shadow syntax
-	border-top: 1px solid $zon_light_grey
 	font-family: $font-tabletgothic
-	padding: $junior $junior 0 $junior
+	+respond-min($break-tablet-min)
+		border-top: 1px solid $zon_light_grey
+		padding: $page-padding remify($petite--px) 0 $page-padding
+		+box-shadow(inset remify(240px) 0px 0px 0px $zon_lighter_grey) // w3c style box-shadow syntax
 
 .parquet-meta
-	+inline-block
-	// padding: $petite
+	display: block
 	vertical-align: top
-	width: remify(200px)
+	+respond-min($break-tablet-min)
+		+inline-block(top)
+		width: remify(200px)
 
 	&__title
-		color: $black
 		+link
-			color: $black
+			color: inherit
 			text-decoration: none
-		font-size: remify(24px)
+		background-color: $zon_lighter_grey
+		color: $zon-charcoal
+		display: block
+		font-size: remify(22px)
 		font-weight: bold
 		letter-spacing: 0.03em
-		line-height: 1
+		line-height: 1.0
+		margin: 0 (-$page-padding) remify($petite--px) (-$page-padding)
+		padding: remify($small--px) $page-padding remify($little--px) $page-padding
+		width: auto
 		@at-root a#{&}
 			+on-interaction
 				text-decoration: underline
+		+respond-min($break-tablet-min)
+			background-color: none
+			font-size: remify(24px)
+			line-height: 1.0
+			margin: 0
+			padding: 0
 
 	&__topic-links
-		list-style: none
-		padding: 0
+		display: none
+		+respond-min($break-tablet-min)
+			display: block
+			list-style: none
+			padding: 0
 
 	&__topic-link,
+	&__more-link
+		display: none
+		+respond-min($break-tablet-min)
+			+link-colors($zon_grey)
+			display: block
+			font-size: remify(14px)
+			letter-spacing: 0.03em
 
 	&__more-link
-		+link-colors($zon_grey)
-		font-size: remify(14px)
-		letter-spacing: 0.03em
-
-	&__more-link
-		font-weight: bold
-		line-height: 1.334
-		&:after
-			content: ' \25B8 ' // Black Right-Pointing Small Triangle
+		display: none
+		+respond-min($break-tablet-min)
+			display: block
+			font-weight: bold
+			line-height: 1.334
+			&:after
+				content: ' \25B8 ' // Black Right-Pointing Small Triangle
 
 .parquet-teasers
 	+inline-block
 	margin: 0
 	width: 78.0%
+	padding: 0
