--- a/sass/web.site/modules/_teaser-parquet-large.sass
+++ b/sass/web.site/modules/_teaser-parquet-large.sass
@@ -1,46 +1,39 @@
-$parquet-image-large-width: remify(360px)
+$parquet-image-large: remify( (360px + $petite--px) )
 
 .teaser-parquet-large
 	@extend %teaser
-	padding: remify($petite--px) 0 0 0
-	position: relative
+	padding: remify($petite--px 0)
+	+respond-min($break-tablet-min)
+		padding: remify(0 0 $petite--px 0)
+
+	&__container
+		display: table-cell
+		margin: remify(0 0 $petite--px 0)
+		vertical-align: top
 
 	&__media
 		@extend %teaser-media
 		+respond-min($break-tablet-min)
-			+inline-block
-			width: $parquet-image-large-width
-			margin: remify(0 $petite--px $petite--px 0)
+			display: table-cell
+			padding: remify(0 $petite--px $petite--px 0)
+			width: $parquet-image-large
+			vertical-align: top
 
 	&__media-item
 		@extend %teaser-media-item
-
 	&__heading
 		@extend %teaser-heading
-		+inline-block
-
 	&__combined-link
 		@extend %teaser-combined-link
-
 	&__kicker
 		@extend %teaser-kicker
-
 	&__title
 		@extend %teaser-title
-
 	&__text
 		@extend %teaser-text
-
 	&__byline
 		@extend %teaser-byline
-
 	&__metadata
 		@extend %teaser-byline // no accident
-
 	&__commentcount
 		@extend %teaser-commentcount
-
-	&__container
-		+inline-block
-		margin: remify(0 0 $petite--px 0)
-		// max-width: remify(290px)
