--- a/sass/web.site/modules/_teaser-parquet-small.sass
+++ b/sass/web.site/modules/_teaser-parquet-small.sass
@@ -1,47 +1,37 @@
-$parquet-image-small-width: remify(174px)
+$parquet-image-small: remify( (174px + $petite--px) )
 
 .teaser-parquet-small
 	@extend %teaser
-	padding: remify($petite--px) 0 0 0
-	position: relative
+	padding: remify($petite--px 0 0 0)
+	+respond-min($break-tablet-min)
+		padding: remify(0 0 $petite--px 0)
 
 	&__media
 		display: none
 		+respond-min($break-tablet-min)
-			+inline-block
-			width: $parquet-image-small-width
-			margin: remify(0 $petite--px $petite--px 0)
+			display: table-cell
+			width: $parquet-image-small
+			padding: remify(0 $petite--px $petite--px 0)
+			vertical-align: top
 
+	&__container
+		@extend %teaser-small-container
 	&__media-item
 		@extend %teaser-media-item
-
 	&__heading
 		@extend %teaser-heading
-		+inline-block
-
 	&__combined-link
 		@extend %teaser-combined-link
-
 	&__kicker
 		@extend %teaser-kicker
-
 	&__title
 		@extend %teaser-title
 		font-size: remify(18px)
-
 	&__text
 		@extend %teaser-text
-
 	&__byline
 		@extend %teaser-byline
-
 	&__metadata
 		@extend %teaser-byline // no accident
-
 	&__commentcount
 		@extend %teaser-commentcount
-
-	&__container
-		+inline-block
-		margin: remify(0 0 $petite--px 0)
-		// max-width: remify(470px)
