ZON-1241: fix margins

--- a/sass/web.site/modules/_teaser-parquet-large.sass
+++ b/sass/web.site/modules/_teaser-parquet-large.sass
@@ -35,5 +35,6 @@ $parquet-image-large: remify( (360px + $petite--px) )
 		@extend %teaser-byline
 	&__metadata
 		@extend %teaser-byline // no accident
+		margin-bottom: 0
 	&__commentcount
 		@extend %teaser-commentcount
