--- a/src/zeit/web/magazin/templates/feature_longform.html
+++ b/src/zeit/web/magazin/templates/feature_longform.html
@@ -1,5 +1,32 @@
 {% extends "zeit.web.magazin:templates/longform.html" %}
 
+{% block pagetitle %}
+<title>{{ view.pagetitle | replace('ZEITmagazin', 'ZEIT ONLINE')}}</title>
+{% endblock pagetitle %}
+
+{% block sharing_meta -%}
+    <meta name="twitter:card" content="{{view.twitter_card_type}}">
+    <meta name="twitter:site" content="@zeitonline">
+    <meta name="twitter:creator" content="@zeitonline">
+    <meta name="twitter:title" content="{{view.title}}">
+    <meta name="twitter:description" content="{{view.subtitle}}">
+    <meta property="og:site_name" content="ZEIT ONLINE">
+    <meta property="fb:admins" content="595098294">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="{{view.title or 'ZEIT ONLINE'}}">
+    <meta property="og:description" content="{{view.subtitle or 'ZEIT ONLINE'}}">
+    <meta property="og:url" content="{{view.article_url or 'http://' + request.host + request.path_info}}">
+    {% if view.image_group -%}
+        <meta property="og:image" content="{{ view.image_group|sharing_image_url(image_pattern='og-image') }}">
+        <link itemprop="image" rel="image_src" href="{{ view.image_group|sharing_image_url(image_pattern='og-image') }}">
+        {% if view.twitter_card_type == 'summary' -%}
+            <meta name="twitter:image:src" content="{{ view.image_group|sharing_image_url(image_pattern='twitter-image-small') }}">
+        {% else -%}
+            <meta name="twitter:image:src" content="{{ view.image_group|sharing_image_url(image_pattern='twitter-image-large') }}">
+        {% endif -%}
+    {% endif -%}
+{%- endblock sharing_meta %}
+
 {% block longform_logo %}
     <a href="http://www.zeit.de/index" class="main-nav__logo" itemscope itemtype="http://schema.org/Organization" id="hp.zm.topnav.logo./index">
         <meta itemprop="name" content="Zeit Online">
