--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -32,16 +32,26 @@
 		line-height: 1.0
 		margin: 0 (-$page-padding)
 		padding: remify($small--px) $page-padding remify($little--px) $page-padding
+		position: relative
 		width: auto
 		@at-root a#{&}
 			+on-interaction
 				text-decoration: underline
 		+respond-min($break-tablet-min)
-			background-color: none
+			background: none
 			font-size: remify(24px)
 			line-height: 1.0
 			margin: 0
 			padding: 0
+		&:after
+			content: '\203A' // › = Single right-pointing angle quotation mark
+			position: absolute
+			right: remify($petite--px)
+			font-size: remify(32px)
+			top: remify(12px)
+			color: $grey
+			+respond-min($break-tablet-min)
+				content: ''
 
 	&__topic-links
 		display: none
