ZON-1241: parquet: extend mobile teaser borders

--- a/sass/web.site/modules/_teaser-parquet-small.sass
+++ b/sass/web.site/modules/_teaser-parquet-small.sass
@@ -1,6 +1,6 @@
 .teaser-parquet-small
 	@extend %teaser
-	padding: remify($petite--px 0)
+	padding: remify($petite--px) $page-padding
 	+respond-min($break-tablet-min)
 		padding: remify(0 0 $petite--px 0)
 
