--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -1,8 +1,7 @@
 .parquet
 	clear: both
 	display: block
-	+respond-min($break-tablet-min)
-		margin: 0 (-$page-padding)
+	margin: 0 (-$page-padding) // parquet has 'full width'
 
 .parquet-row
 	font-family: $font-tabletgothic
@@ -24,14 +23,12 @@
 		+link
 			color: inherit
 			text-decoration: none
-		background-color: $zon_lighter_grey // TODO: can be removed soon
 		color: $zon-charcoal
 		display: block
 		font-size: remify(22px)
 		font-weight: bold
 		letter-spacing: 0.03em
 		line-height: 1.0
-		margin: 0 (-$page-padding)
 		padding: remify($small--px) $page-padding remify($little--px) $page-padding
 		position: relative
 		width: auto
