--- a/sass/web.site/modules/_teaser.sass
+++ b/sass/web.site/modules/_teaser.sass
@@ -8,7 +8,7 @@
 	border-top: 1px solid #ccc
 	&:nth-of-type(1)
 		border-top: none
-	+respond-min($break-phablet-min)
+	+respond-min($break-tablet-min)
 		border-bottom: none
 		border-top: none
 
