--- a/sass/web.site/modules/_teaser-series.sass
+++ b/sass/web.site/modules/_teaser-series.sass
@@ -2,8 +2,8 @@
 .teaser-series
 	@extend %teaser
 	+respond-min($break-phablet-min)
-		border-top: 1px dotted $grey--mid
-		border-bottom: 1px dotted $grey--mid
+		border-top: 1px dotted $zon_light_grey
+		border-bottom: 1px dotted $zon_light_grey
 		margin-top: $little
 		position: relative
 	+respond-min($break-desktop-min)
@@ -12,7 +12,7 @@
 		font-family: TabletGothic
 		font-size: $little
 		font-weight: 200
-		letter-spacing: $standard-letter-spacing
+		letter-spacing: 0.07
 		line-height: 1
 		margin: 0 0 1em 0
 		text-transform: uppercase
@@ -24,8 +24,8 @@
 			top: em(-6px, $little--px)
 			+inline-block
 		+respond-min($break-desktop-min)
-			font-size: em(16px)
-			padding-right: em(5px)
+			font-size: 0.0875
+			padding-right: 0.75
 			top: em(-8px, 16px)
 	&__media
 		@extend %teaser-media
