--- a/sass/web.site/modules/_teaser-small.sass
+++ b/sass/web.site/modules/_teaser-small.sass
@@ -21,6 +21,8 @@
 		@extend %teaser-byline
 	&__metadata
 		@extend %teaser-byline
+	&__datetime
+		@extend %teaser-datetime
 	&__commentcount
 		@extend %teaser-commentcount
 
