ZON-1290: Add some beta launch text jibber jabber

--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -3,6 +3,23 @@
 
 {% block main %}
     <div class="main__fullwidth">
-    Hier Jetzt Beta
+        <div class="beta-teaser">
+            <h1 class="beta-teaser__title">ZEIT ONLINE Beta</h1>
+            <p class="beta-teaser__prose">
+                Sehen Sie schon heute das ZEIT ONLINE von morgen oder ein ähnlicher
+                weniger klischeehafter Relaunch Teasertext. Lorem ipsum Consectetur
+                nostrud consequat sit non ad nulla officia culpa Excepteur
+                exercitation aute est esse voluptate minim do cillum pariatur
+                fugiat dolor nisi sunt nostrud ea sed ad labore sit Duis in
+                cupidatat dolor tempor mollit adipisicing minim deserunt proident.
+            </p>
+            <p class="beta-teaser__cta" style="font-size:1.2em;">
+                Um sich für einen Beta-Zugang zu bewerben, schicken Sie einfach
+                eine E-Mail an:
+                <a href="mailto:beta@zeit.de" style="outline:2px 4px">
+                    beta@zeit.de
+                </a>
+            </p>
+        </div>
     </div>
 {% endblock main %}
