--- a/sass/web.site/modules/_teaser.sass
+++ b/sass/web.site/modules/_teaser.sass
@@ -46,7 +46,7 @@
 %teaser-kicker
 	display: block
 	color: $color-text-highlighted
-	font-family: TabletGothicNarrow
+	font-family: $font-tabletgothicnarrow
 	font-size: $zon-font-s
 	font-weight: bold
 	letter-spacing: $zon-letter-spacing-l
