--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -30,6 +30,7 @@
 @import "modules/teaser-buzz"
 @import "modules/teaser-parquet-small"
 @import "modules/teaser-parquet-large"
+@import "modules/teaser-beta"
 @import "modules/snapshot"
 
 // ads
