--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -2,63 +2,54 @@
 {% extends "zeit.web.site:templates/layout.html" %}
 
 {% block main %}
-<p>{{ view.beta_user }}</p>
-<p>{{ view.community_user }}</p>
-<p>{{ view["site_version"] }}</p>
-
     <div class="main__fullwidth">
-        {% if view.beta_user == True %}
-        <div class="beta-toggle">
-            <h1 class="beta-toggle__title">ZEIT ONLINE Beta</h1>
-            <p class="beta-toggle__prose">
-                Hier können Sie die Beta-Nutzung ein oder ausschalten. Lorem
-                ipsum consequat sit non ad nulla officia culpa Excepteur
-                exercitation aute est esse voluptate minim do cillum pariatur
-                fugiat dolor nisi sunt nostrud ea sed ad labore sit Duis in
-                cupidatat dolor tempor mollit adipisicing minim deserunt proident.
-            </p>
-            <form class="beta-toggle__cta" action="{{ view.friedbert_host }}beta" method="POST">
-                <label>
-                    Wollen Sie die ZEIT ONLINE Beta Version nutzen?<br>
-                </label>
-                <input type="radio" name="opt" value="in"{% if view["site_version"] == "opt_in" %} checked{% endif %}> Ja<br>
-                <input type="radio" name="opt" value="out"{% if view["site_version"] == "opt_out" %} checked{% endif %}> Nein<br>
-                <input type="submit" value="Speichern">
-            </form>
-        {% elif view.community_user["uid"] != "0" %}
         <div class="beta-teaser">
-            <h1 class="beta-teaser__title">ZEIT ONLINE Beta</h1>
+            <img class="beta-teaser__image" alt="ZEIT ONLINE Beta Teaser" src="{{ view.beta_teaser_img }}">
+            {% if view.beta_user == True %}
+            <span class="beta-teaser__kicker">Public Beta</span>
+            <span class="beta-teaser__title">ZEIT ONLINE Beta</span>
             <p class="beta-teaser__prose">
-                Sehen Sie schon heute das ZEIT ONLINE von morgen oder ein ähnlicher
-                weniger klischeehafter Relaunch Teasertext. Lorem ipsum Consectetur
-                nostrud consequat sit non ad nulla officia culpa Excepteur
-                exercitation aute est esse voluptate minim do cillum pariatur
-                fugiat dolor nisi sunt nostrud ea sed ad labore sit Duis in
-                cupidatat dolor tempor mollit adipisicing minim deserunt proident.
+                Vielen Dank, Sie wurden für die ZEIT Beta freigeschaltet. Sie können an dieser
+                Stelle jederzeit zwischen der neuen un der alten Ansich wechseln.
             </p>
-            <p class="beta-teaser__cta">
-                Um sich für einen Beta-Zugang zu bewerben, schicken Sie einfach
-                eine E-Mail an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
+            <form class="beta-teaser__cta beta-teaser__cta--aligned" action="{{ view.friedbert_host }}beta" method="POST">
+                <input class="beta-teaser__radio" type="radio" name="opt" value="in" id="opt-in"{% if view.site_version == "opt_in" %} checked{% endif %}>
+                <label class="beta-teaser__label" for="opt-in">Ich möchte die neue ZEIT Beta sehen</label><br/>
+                <input class="beta-teaser__radio" type="radio" name="opt" value="out" id="opt-out"{% if view.site_version != "opt_in" %} checked{% endif %}>
+                <label class="beta-teaser__label" for="opt-out">Ich möchte die klassische ZEIT sehen</label><br/>
+                <input class="beta-teaser__button" type="submit" value="Speichern">
+            </form>
+            {% elif view.community_user.uid != "0" %}
+            <span class="beta-teaser__kicker">Public Beta</span>
+            <span class="beta-teaser__title">Beta-Zugang beantragen</span>
+            <p class="beta-teaser__prose">
+                Mit unserer neuen Webseite haben wir die Weichen für den Journalismus
+                von morgen gestellt. Um sich für einen Beta-Zugang zu bewerben, schicken Sie
+                einfach eine E-Mail an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
             </p>
+            <div class="beta-teaser__cta">
+                <a class="beta-teaser__button" href="mailto:beta@zeit.de">E-Mail senden</a>
+            </div>
+            {% else %}
+            <span class="beta-teaser__kicker">Public Beta</span>
+            <span class="beta-teaser__title">ZEIT ONLINE Beta</span>
+            <p class="beta-teaser__prose">
+                Mit unserer neuen Webseite haben wir die Weichen für den Journalismus
+                von morgen gestellt. Registrieren Sie sich als Beta-Nutzer, um schon
+                heute neue Artikelformate, bessere Performance und ein aufgeräumteres
+                Design zu genießen.
+            </p>
+            <p class="beta-teaser__prose">
+                <b>Bitte loggen Sie sich ein!</b>
+                Sie benötigen einen ZEIT ONLINE Community Login, um die Beta-Version
+                nutzen zu können. Bitte loggen Sie sich mit Ihren bestehenden Zugangsdaten ein.
+                Wenn Sie noch keinen Account besitzen, können Sie sich hier registrieren.
+            </p>
+            <div class="beta-teaser__cta">
+                <a class="beta-teaser__button beta-teaser__button--inline" href="{{ view.community_host }}/user/login?destination={{ view.friedbert_host }}beta">Zur Anmeldung</a>
+                <a class="beta-teaser__button beta-teaser__button--inline" href="{{ view.community_host }}/user/register?destination={{ view.friedbert_host }}beta">Zur Registrierung</a>
+            </div>
+            {% endif %}
         </div>
-        {% else %}
-         <div class="beta-prompt">
-            <h1 class="beta-prompt__title">ZEIT ONLINE Beta</h1>
-            <p class="beta-prompt__prose">
-                Sehen Sie schon heute das ZEIT ONLINE von morgen oder ein ähnlicher
-                weniger klischeehafter Relaunch Teasertext. Lorem ipsum Consectetur
-                nostrud consequat sit non ad nulla officia culpa Excepteur
-                exercitation aute est esse voluptate minim do cillum pariatur
-                fugiat dolor nisi sunt nostrud ea sed ad labore sit Duis in
-                cupidatat dolor tempor mollit adipisicing minim deserunt proident.
-            </p>
-            <p class="beta-prompt__cta">
-                Die ZEIT ONLINE Beta Version ist nur für angemeldete Community Nutzer
-                zugänglich.
-                <a href="{{ view.community_host }}/user/login?destination={{ view.friedbert_host }}beta">Anmelden</a>
-                <a href="{{ view.community_host }}/user/register?destination={{ view.friedbert_host }}beta">Registrieren</a>
-            </p>
-        </div>
-        {% endif %}
     </div>
 {% endblock main %}
