ZON-1290: Set fluid width for beta page elements

--- a/sass/web.site/modules/_teaser-beta.sass
+++ b/sass/web.site/modules/_teaser-beta.sass
@@ -1,7 +1,7 @@
 .beta-teaser
 	@extend %teaser
 	margin: 0 auto
-	width: 600px
+	max-width: 600px
 
 	&__image
 		width: 100%
@@ -20,7 +20,7 @@
 
 	&__prose,
 	&__cta
-		width: 400px
+		max-width: 400px
 		margin: 6px auto
 		color: $zon_grey
 
