--- a/src/zeit/web/site/templates/centerpage.html
+++ b/src/zeit/web/site/templates/centerpage.html
@@ -21,6 +21,9 @@ Available attributes:
         {%- include "zeit.web.site:templates/inc/cp_area_buzz.html" ignore missing -%}
         {{ lama_site.show_informative_ad(view) }}
     </div>
+    <div class="main__videobar">
+        {%- include "zeit.web.site:templates/inc/cp_area_videobar.html" ignore missing -%}
+    </div>
     <div class="main__parquet">
         {%- include "zeit.web.site:templates/inc/cp_area_parquet.html" ignore missing -%}
     </div>
