ZON-1292: Clean up sass color constants

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -13,9 +13,6 @@ $break-desktop-min: em(980px)
 $teaser-image-phablet-width: em(150px)
 $teaser-image-desktop-width: em(250px)
 
-// colors
-$zon-red: #b91109
-
 // letter-spacing (a half of a pixel)
 $zon-letter-spacing-l: 0.08em
 $zon-letter-spacing-m: 0.04em
@@ -32,6 +29,15 @@ $teaser-column-series-position: 100px
 $teaser-column-mobile-image-size: 80px
 $teaser-column-topmargin: 40px
 
+// colors
+$zon-red: #b91109
+$zon-charcoal: #252525
+$zon_dark_grey: #444
+$zon_grey: #777
+$zon_mid_grey: #999
+$zon_light_grey: #CCC
+$zon_lighter_grey: #EEE
+
 // semantic colors
 $color-body-bg: $white
 $color-page-bg: $white
@@ -44,20 +50,12 @@ $color-link--hover: $black
 $color-input: $grey--mid
 $color-input-bg: $grey--light
 
-$color-button:              $white
-$color-button--hover:       $white
+$color-button:              $grey--mid-dark
+$color-button--hover:       $grey--mid-dark
 $color-button--disabled:    $charcoal
-$color-button-bg:           $grey--mid-dark
-$color-button-bg--hover:    $grey--mid
-$color-button-bg--disabled: $grey--light
-
-//colors
-$zon-charcoal: #252525
-$zon_dark_grey: #444
-$zon_grey: #777
-$zon_mid_grey: #999
-$zon_light_grey: #CCC
-$zon_lighter_grey: #EEE
+$color-button-bg:           $white
+$color-button-bg--hover:    $grey--light
+$color-button-bg--disabled: $white
 
 //extended fonts
 $font-xxxs: remify(9px)
