--- a/sass/web.site/modules/_teaser.sass
+++ b/sass/web.site/modules/_teaser.sass
@@ -46,7 +46,7 @@
 %teaser-kicker
 	display: block
 	color: $color-text-highlighted
-	font-family: TabletGothicNarrow
+	font-family: $font-tabletgothicnarrow
 	font-size: $zon-font-s
 	font-weight: bold
 	letter-spacing: $zon-letter-spacing-l
@@ -68,7 +68,7 @@
 %teaser-title
 	display: block
 	color: $zon-charcoal
-	font-family: TabletGothic
+	font-family: $font-tabletgothic
 	font-size: $font-l
 	font-weight: 700
 	letter-spacing: $zon-letter-spacing-s
@@ -92,16 +92,17 @@
 %teaser-byline
 	color: $grey
 	display: block
-	font-family: TabletGothicNarrow
+	font-family: $font-tabletgothicnarrow
 	font-size: $font-s
 	letter-spacing: $zon-letter-spacing-m
 	margin-bottom: 4px // IE 8 Fallback
 	margin-bottom: rem(4px)
 
 %teaser-metadata
-	font-size: em(13px)
+	color: $grey
+	font-size: $font-s
 	line-height: 1.4
-	font-weight: bold
+	font-weight: 200
 	letter-spacing: $standard-letter-spacing
 
 %teaser-datetime
