ZON-1292: Adjust border color

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -30,8 +30,10 @@ $teaser-column-mobile-image-size: 80px
 $teaser-column-topmargin: 40px
 
 // colors
+// for naming inspiration see http://chir.ag/projects/name-that-color/
 $zon-red: #b91109
 $zon-charcoal: #252525
+$zon-alto: #dddddd
 $zon_dark_grey: #444
 $zon_grey: #777
 $zon_mid_grey: #999
@@ -49,6 +51,7 @@ $color-link--default: $grey
 $color-link--hover: $black
 $color-input: $grey--mid
 $color-input-bg: $grey--light
+$color-border: $zon-alto
 
 $color-button:              $grey--mid-dark
 $color-button--hover:       $grey--mid-dark
