--- a/sass/web.site/modules/_teaser-printbox.sass
+++ b/sass/web.site/modules/_teaser-printbox.sass
@@ -2,7 +2,7 @@
 
 	&__heading
 		color: $zon-charcoal
-		border-bottom: 1px solid $zon_lighter_grey
+		border-bottom: 1px solid $color-border
 		font-size: $font-s
 		font-weight: bold
 		letter-spacing: 1px
