--- a/sass/web.site/modules/_teaser-buzz.sass
+++ b/sass/web.site/modules/_teaser-buzz.sass
@@ -3,11 +3,10 @@
 		margin-bottom: $twice
 
 	&__heading
-		border-bottom: $hair--px solid $zon_light_grey
-		font-family: $font-tabletgothic
+		border-bottom: 1px solid $color-border
 		font-size: $font-s
 		font-weight: bold
-		letter-spacing: $hair
+		letter-spacing: 1px
 		line-height: normal
 		margin: 0 0 $fine 0
 		padding: remify(10px)
@@ -55,7 +54,6 @@
 
 	&__label
 		color: $zon_dark_grey
-		font-family: $font-tabletgothic
 		font-size: $font-mxl
 		font-weight: bold
 		line-height: $font-mxl
@@ -73,7 +71,6 @@
 	&__label
 		color: $zon_grey
 		font-size: $font-xs
-		font-family: $font-tabletgothic
 		font-size: $font-s
 		font-weight: 200
 		letter-spacing: $zon-letter-spacing-s
