--- a/src/zeit/web/site/templates/inc/cp_area_videobar.html
+++ b/src/zeit/web/site/templates/inc/cp_area_videobar.html
@@ -1,10 +1,86 @@
-<div class="videbar">
-    <span class="videobar__title">Videos auf ZEIT ONLINE</span>
-    {% for video in view.area_videobar.videos %}
-    <div class"video-teaser">
-        <span class"video-teaser__kicker">{{ video.teaserSupertitle | hide_none }}</span>
-        <span class"video-teaser__title">{{ video.teaserTitle | hide_none }}</span>
-        <img class"video-teaser__thumbnail" src="{{ video.thumbnail | hide_none }}">
+<section class="video-stage" id="video-bar">
+    <!-- html5, eine section braucht eine headline, falls das seomäßig nicht geht, können wir auch nicht section nehmen -->
+    <header>
+        <h6 class="video-stage-heading">Videos auf <span class="video-stage-heading__logo">ZEIT ONLINE</span></h6>
+    </header>
+
+<!--     <div class="video-stage-main">
+        <article class="video-large" data_video-id="123456789">
+            <a class="video-large__combined-link" href="http://www.zeit.de/video/einzelseite">
+                <div class="video-large__container">
+                    <img src="" alt="Filmtipp: &quot;Das Verschwinden von Elenor Rickby&quot; mit Jessica Chestain" title="Zum Abspielen des Videos anklicken" class="video-large__still" />
+                    <div class="video-playbutton">
+                        <span class="video-playbutton__icon video-playbutton__icon--play"></span>
+                        <strong class="video-playbutton__text">Video ansehen</strong>
+                        <span class="video-playbutton__time">1:32</span>
+                    </div>
+                </div>
+                <h2 class="video-large-title">
+                    <span class="video-large-title__kicker">Kino</span>
+                    <span class="video-large-title__title">Filmtipp: &quot;Das Verschwinden von Elenor Rickby&quot; mit Jessica Chestain</span>
+                </h2>
+            </a>
+        </article>
+    </div> -->
+
+    <div class="video-stage-secondary">
+        <h6 class="video-secondary__title">Die neuesten Videos</h6>
+        {% for video in view.area_videobar.videos %}
+        <article class="video-small" data-video-id="">
+            <a class="video-small__combined-link" href="{{video | create_url}}">
+                <div class="video-small__container">
+                    <img src="{{ video.video_still | hide_none }}" alt="{{video.teaserSupertitle}} {{video.teaserTitle}}" title="Zum Abspielen des Videos anklicken" class="video-small__still" />
+                    <div class="video-playbutton video-playbutton--small">
+                        <span class="video-playbutton__icon video-playbutton__icon--play video-playbutton__icon--small"></span>
+                        <span class="video-playbutton__time video-playbutton__time--small">1:32</span>
+                    </div>
+                </div>
+                <h2 class="video-small-title">
+                    <span class="video-small-title__kicker">
+                        {{- video.teaserSupertitle | hide_none -}}
+                    </span>
+                    <span class="video-small-title__title">
+                        {{- video.teaserTitle | hide_none -}}
+                    </span>
+                </h2>
+            </a>
+        </article>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
+
+    <footer class="video-stage-footer">
+        <div class="video-series">
+            <!-- ist so nicht accessible umzusetzen, ohne js auch nicht bedienbar -->
+            <label for="video_series_select" class="video-series__label">Videoserien</label>
+            <select id="series_select" class="video-series__select" name="serie">
+                <option>Bitte auswählen</option>
+                <option data-url="utopien" value="Utopien">Utopien</option>
+                <option data-url="br" value="BR">BR</option>
+                <option data-url="br-hochschulportraets" value="BR-Hochschulporträts">BR-Hochschulporträts</option>
+                <option data-url="deutsche-kinemathek" value="Deutsche Kinemathek">Deutsche Kinemathek</option>
+                <option data-url="meine-kleine-idee-fuer-europa" value="Meine kleine Idee für Europa">Meine kleine Idee für Europa</option>
+                <option data-url="idee-des-jahres" value="Idee des Jahres">Idee des Jahres</option>
+                <option data-url="die-unverzagten" value="Die Unverzagten">Die Unverzagten</option>
+                <option data-url="bewerbungsfangfragen" value="Bewerbungsfangfragen">Bewerbungsfangfragen</option>
+                <option data-url="kurzfilme" value="Kurzfilme">Kurzfilme</option>
+                <option data-url="talking-fashion" value="Talking Fashion">Talking Fashion</option>
+                <option data-url="filmtipp" value="Filmtipp">Filmtipp</option>
+                <option data-url="rekorder" value="Rekorder">Rekorder</option>
+                <option data-url="rekorder-b-seiten" value="Rekorder B-Seiten">Rekorder B-Seiten</option>
+                <option data-url="die-zeit-tv" value="DIE ZEIT TV">DIE ZEIT TV</option>
+                <option data-url="erklaervideos" value="Erklärvideos">Erklärvideos</option>
+                <option data-url="lesetipp" value="Lesetipp">Lesetipp</option>
+                <option data-url="taktisch-klug" value="Taktisch klug">Taktisch klug</option>
+                <option data-url="thomas-sarbacher-liest" value="Thomas Sarbacher liest">Thomas Sarbacher liest</option>
+                <option data-url="dr-max" value="Dr. Max">Dr. Max</option>
+                <option data-url="helmut-schmidt" value="Helmut Schmidt">Helmut Schmidt</option>
+                <option data-url="zehnseiten" value="Zehnseiten">Zehnseiten</option>
+                <option data-url="zeit-akademie-evolution" value="ZEIT Akademie: Evolution">ZEIT Akademie: Evolution</option>
+                <option data-url="zeit-akademie-philosophie" value="ZEIT Akademie: Philosophie">ZEIT Akademie: Philosophie</option>
+                <option data-url="zeit-akademie-oekonomie" value="ZEIT Akademie: Ökonomie">ZEIT Akademie: Ökonomie</option></select>
+            </select>
+        </div>
+        <!-- sind doch gar nicht alle Videos? -->
+        <a class="video-centerpage-link" href="http://www.zeit.de/video">Alle Videos</a>
+    </footer>
+</section>
