--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -12,7 +12,7 @@
             <span class="beta-teaser__title">ZEIT ONLINE Beta</span>
             <p class="beta-teaser__prose">
                 Vielen Dank, Sie wurden für die ZEIT Beta freigeschaltet. Sie können an dieser
-                Stelle jederzeit zwischen der neuen un der alten Ansich wechseln.
+                Stelle jederzeit zwischen der neuen und der alten Ansicht wechseln.
             </p>
             <form class="beta-teaser__cta beta-teaser__cta--aligned" action="{{ view.friedbert_host }}beta" method="POST">
                 <input class="beta-teaser__radio" type="radio" name="opt" value="in" id="opt-in"{% if view.site_version == "opt_in" %} checked{% endif %}>
