--- a/src/zeit/web/site/templates/beta.html
+++ b/src/zeit/web/site/templates/beta.html
@@ -27,7 +27,7 @@
             <p class="beta-teaser__prose">
                 Mit unserer neuen Webseite haben wir die Weichen für den Journalismus
                 von morgen gestellt. Um sich für einen Beta-Zugang zu bewerben, schicken Sie
-                einfach eine E-Mail an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
+                einfach eine E-Mail mit ihrem Benutzernamen an <a href="mailto:beta@zeit.de">beta@zeit.de</a>.
             </p>
             <div class="beta-teaser__cta">
                 <a class="beta-teaser__button" href="mailto:beta@zeit.de">E-Mail senden</a>
