FIX: Output real comment counts in website teasers

--- a/sass/web.site/modules/_teaser.sass
+++ b/sass/web.site/modules/_teaser.sass
@@ -105,7 +105,7 @@
 	letter-spacing: $standard-letter-spacing
 
 %teaser-datetime
-	&:after
+	&:not(:last-child):after
 		content: ' ⧸ '
 		margin: 0 $micro 0 $micro
 
