ZON-1296: videobar: add basic styles

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -31,6 +31,7 @@
 @import "modules/teaser-parquet-small"
 @import "modules/teaser-parquet-large"
 @import "modules/snapshot"
+@import "modules/videobar"
 
 // ads
 @import "modules/adplaces"
